CompiladorNosotrosvf/y.output
   0  $accept : programa $end

   1  programa : lista_declaraciones

   2  lista_declaraciones : lista_declaraciones declaracion
   3                      | declaracion

   4  declaracion : declaracion_variables
   5              | declaracion_funcion

   6  declaracion_variables : tipo lista_variables ';'

   7  lista_variables : lista_variables ',' lista
   8                  | lista

   9  lista : ID
  10        | ID '[' ENTERO ']'

  11  tipo : INT
  12       | FLOAT
  13       | DOUBLE
  14       | CHAR
  15       | VOID
  16       | tipo_struct

  17  tipo_struct : STRUCT ID '{' cuerpo_struct '}'
  18              | STRUCT '{' cuerpo_struct '}'
  19              | STRUCT ID

  20  cuerpo_struct : cuerpo_struct declaracion_variables
  21                | declaracion_variables

  22  $$1 :

  23  declaracion_funcion : tipo ID '(' parametros ')' $$1 bloque

  24  parametros : lista_parametros
  25             | VOID

  26  lista_parametros : lista_parametros ',' parametro
  27                   | parametro

  28  parametro : tipo ID '[' ']'
  29            | tipo ID

  30  bloque : '{' declaraciones_locales lista_sentencias '}'

  31  declaraciones_locales : declaraciones_locales declaracion_variables
  32                        |

  33  lista_sentencias : lista_sentencias sentencia
  34                   |

  35  sentencia : sentencia_exp
  36            | sentencia_if
  37            | sentencia_while
  38            | sentencia_do
  39            | sentencia_switch
  40            | sentencia_for
  41            | sentencia_break
  42            | sentencia_return
  43            | bloque
  44            | sentencia_imprime
  45            | sentencia_lee

  46  sentencia_exp : expresion ';'
  47                | ';'

  48  sentencia_if : IF '(' expresion ')' sentencia sentencia_else

  49  sentencia_else : ELSE sentencia
  50                 |

  51  sentencia_while : WHILE '(' expresion ')' sentencia

  52  sentencia_do : DO sentencia WHILE '(' expresion ')' ';'

  53  sentencia_switch : SWITCH '(' ID ')' '{' lista_casos case_default '}'

  54  lista_casos : lista_casos sentencia_case
  55              | sentencia_case

  56  sentencia_case : CASE ENTERO ':' sentencia sentencia_break

  57  case_default : DEFAULT ':' sentencia sentencia_break
  58               |

  59  sentencia_for : FOR '(' expresion ';' expresion ';' sentencia_incremento ')' sentencia

  60  sentencia_break : BREAK ';'

  61  sentencia_incremento : ID INC
  62                       | ID DEC

  63  sentencia_imprime : PRINT '(' expresion ')' ';'

  64  sentencia_lee : SCAN '(' ID ')' ';'

  65  sentencia_return : RETURN ';'
  66                   | RETURN expresion ';'

  67  expresion : variable operador_asignacion expresion
  68            | expresion_simple

  69  operador_asignacion : '='
  70                      | MASIGUAL
  71                      | MENOSIGUAL
  72                      | MULTIGUAL
  73                      | DIVIGUAL
  74                      | MODUIGUAL

  75  variable : ID
  76           | ID '[' expresion ']'

  77  expresion_simple : expresion_simple operador_relacional operando
  78                   | expresion_simple operador_logico operando
  79                   | operando

  80  operador_logico : AND
  81                  | OR

  82  operador_relacional : MENIGU
  83                      | MAYIGU
  84                      | '<'
  85                      | '>'
  86                      | IGUAL
  87                      | DIF

  88  operando : operando operador_adicion termino
  89           | termino

  90  operador_adicion : '+'
  91                   | '-'

  92  termino : termino operador_mul factor
  93          | factor

  94  operador_mul : '*'
  95               | '/'
  96               | '%'

  97  factor : variable
  98         | llamada
  99         | '(' expresion ')'
 100         | ENTERO
 101         | REAL
 102         | CARACTER
 103         | CADENA
 104         | DOBLE
 105         | '!' expresion
 106         | '-' expresion

 107  llamada : ID '(' argumentos ')'

 108  argumentos : lista_argumentos
 109             |

 110  lista_argumentos : lista_argumentos ',' expresion
 111                   | expresion

state 0
	$accept : . programa $end  (0)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	programa  goto 7
	tipo  goto 8
	lista_declaraciones  goto 9
	declaracion  goto 10
	declaracion_variables  goto 11
	declaracion_funcion  goto 12
	tipo_struct  goto 13


state 1
	tipo : INT .  (11)

	.  reduce 11


state 2
	tipo : FLOAT .  (12)

	.  reduce 12


state 3
	tipo : CHAR .  (14)

	.  reduce 14


state 4
	tipo : DOUBLE .  (13)

	.  reduce 13


state 5
	tipo : VOID .  (15)

	.  reduce 15


state 6
	tipo_struct : STRUCT . ID '{' cuerpo_struct '}'  (17)
	tipo_struct : STRUCT . '{' cuerpo_struct '}'  (18)
	tipo_struct : STRUCT . ID  (19)

	ID  shift 14
	'{'  shift 15
	.  error


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	declaracion_variables : tipo . lista_variables ';'  (6)
	declaracion_funcion : tipo . ID '(' parametros ')' $$1 bloque  (23)

	ID  shift 16
	.  error

	lista_variables  goto 17
	lista  goto 18


state 9
	programa : lista_declaraciones .  (1)
	lista_declaraciones : lista_declaraciones . declaracion  (2)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	$end  reduce 1

	tipo  goto 8
	declaracion  goto 19
	declaracion_variables  goto 11
	declaracion_funcion  goto 12
	tipo_struct  goto 13


state 10
	lista_declaraciones : declaracion .  (3)

	.  reduce 3


state 11
	declaracion : declaracion_variables .  (4)

	.  reduce 4


state 12
	declaracion : declaracion_funcion .  (5)

	.  reduce 5


state 13
	tipo : tipo_struct .  (16)

	.  reduce 16


state 14
	tipo_struct : STRUCT ID . '{' cuerpo_struct '}'  (17)
	tipo_struct : STRUCT ID .  (19)

	'{'  shift 20
	ID  reduce 19


state 15
	tipo_struct : STRUCT '{' . cuerpo_struct '}'  (18)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	tipo  goto 21
	declaracion_variables  goto 22
	tipo_struct  goto 13
	cuerpo_struct  goto 23


state 16
	lista : ID .  (9)
	lista : ID . '[' ENTERO ']'  (10)
	declaracion_funcion : tipo ID . '(' parametros ')' $$1 bloque  (23)

	'('  shift 24
	'['  shift 25
	';'  reduce 9
	','  reduce 9


state 17
	declaracion_variables : tipo lista_variables . ';'  (6)
	lista_variables : lista_variables . ',' lista  (7)

	';'  shift 26
	','  shift 27
	.  error


state 18
	lista_variables : lista .  (8)

	.  reduce 8


state 19
	lista_declaraciones : lista_declaraciones declaracion .  (2)

	.  reduce 2


state 20
	tipo_struct : STRUCT ID '{' . cuerpo_struct '}'  (17)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	tipo  goto 21
	declaracion_variables  goto 22
	tipo_struct  goto 13
	cuerpo_struct  goto 28


state 21
	declaracion_variables : tipo . lista_variables ';'  (6)

	ID  shift 29
	.  error

	lista_variables  goto 17
	lista  goto 18


state 22
	cuerpo_struct : declaracion_variables .  (21)

	.  reduce 21


state 23
	tipo_struct : STRUCT '{' cuerpo_struct . '}'  (18)
	cuerpo_struct : cuerpo_struct . declaracion_variables  (20)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	'}'  shift 30
	.  error

	tipo  goto 21
	declaracion_variables  goto 31
	tipo_struct  goto 13


state 24
	declaracion_funcion : tipo ID '(' . parametros ')' $$1 bloque  (23)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 32
	STRUCT  shift 6
	.  error

	tipo  goto 33
	lista_parametros  goto 34
	parametro  goto 35
	parametros  goto 36
	tipo_struct  goto 13


state 25
	lista : ID '[' . ENTERO ']'  (10)

	ENTERO  shift 37
	.  error


state 26
	declaracion_variables : tipo lista_variables ';' .  (6)

	.  reduce 6


state 27
	lista_variables : lista_variables ',' . lista  (7)

	ID  shift 29
	.  error

	lista  goto 38


state 28
	tipo_struct : STRUCT ID '{' cuerpo_struct . '}'  (17)
	cuerpo_struct : cuerpo_struct . declaracion_variables  (20)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	'}'  shift 39
	.  error

	tipo  goto 21
	declaracion_variables  goto 31
	tipo_struct  goto 13


state 29
	lista : ID .  (9)
	lista : ID . '[' ENTERO ']'  (10)

	'['  shift 25
	';'  reduce 9
	','  reduce 9


state 30
	tipo_struct : STRUCT '{' cuerpo_struct '}' .  (18)

	.  reduce 18


state 31
	cuerpo_struct : cuerpo_struct declaracion_variables .  (20)

	.  reduce 20


state 32
	tipo : VOID .  (15)
	parametros : VOID .  (25)

	ID  reduce 15
	')'  reduce 25


state 33
	parametro : tipo . ID '[' ']'  (28)
	parametro : tipo . ID  (29)

	ID  shift 40
	.  error


state 34
	parametros : lista_parametros .  (24)
	lista_parametros : lista_parametros . ',' parametro  (26)

	','  shift 41
	')'  reduce 24


state 35
	lista_parametros : parametro .  (27)

	.  reduce 27


state 36
	declaracion_funcion : tipo ID '(' parametros . ')' $$1 bloque  (23)

	')'  shift 42
	.  error


state 37
	lista : ID '[' ENTERO . ']'  (10)

	']'  shift 43
	.  error


state 38
	lista_variables : lista_variables ',' lista .  (7)

	.  reduce 7


state 39
	tipo_struct : STRUCT ID '{' cuerpo_struct '}' .  (17)

	.  reduce 17


state 40
	parametro : tipo ID . '[' ']'  (28)
	parametro : tipo ID .  (29)

	'['  shift 44
	')'  reduce 29
	','  reduce 29


state 41
	lista_parametros : lista_parametros ',' . parametro  (26)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	tipo  goto 33
	parametro  goto 45
	tipo_struct  goto 13


state 42
	declaracion_funcion : tipo ID '(' parametros ')' . $$1 bloque  (23)
	$$1 : .  (22)

	.  reduce 22

	$$1  goto 46


state 43
	lista : ID '[' ENTERO ']' .  (10)

	.  reduce 10


state 44
	parametro : tipo ID '[' . ']'  (28)

	']'  shift 47
	.  error


state 45
	lista_parametros : lista_parametros ',' parametro .  (26)

	.  reduce 26


state 46
	declaracion_funcion : tipo ID '(' parametros ')' $$1 . bloque  (23)

	'{'  shift 48
	.  error

	bloque  goto 49


state 47
	parametro : tipo ID '[' ']' .  (28)

	.  reduce 28


state 48
	bloque : '{' . declaraciones_locales lista_sentencias '}'  (30)
	declaraciones_locales : .  (32)

	.  reduce 32

	declaraciones_locales  goto 50


state 49
	declaracion_funcion : tipo ID '(' parametros ')' $$1 bloque .  (23)

	.  reduce 23


state 50
	bloque : '{' declaraciones_locales . lista_sentencias '}'  (30)
	declaraciones_locales : declaraciones_locales . declaracion_variables  (31)
	lista_sentencias : .  (34)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	REAL  reduce 34
	DOBLE  reduce 34
	ENTERO  reduce 34
	CADENA  reduce 34
	ID  reduce 34
	CARACTER  reduce 34
	FOR  reduce 34
	WHILE  reduce 34
	SWITCH  reduce 34
	BREAK  reduce 34
	DO  reduce 34
	SCAN  reduce 34
	PRINT  reduce 34
	RETURN  reduce 34
	IF  reduce 34
	'-'  reduce 34
	'!'  reduce 34
	'('  reduce 34
	'{'  reduce 34
	'}'  reduce 34
	';'  reduce 34

	tipo  goto 21
	declaracion_variables  goto 51
	tipo_struct  goto 13
	lista_sentencias  goto 52


state 51
	declaraciones_locales : declaraciones_locales declaracion_variables .  (31)

	.  reduce 31


state 52
	bloque : '{' declaraciones_locales lista_sentencias . '}'  (30)
	lista_sentencias : lista_sentencias . sentencia  (33)

	REAL  shift 53
	DOBLE  shift 54
	ENTERO  shift 55
	CADENA  shift 56
	ID  shift 57
	CARACTER  shift 58
	FOR  shift 59
	WHILE  shift 60
	SWITCH  shift 61
	BREAK  shift 62
	DO  shift 63
	SCAN  shift 64
	PRINT  shift 65
	RETURN  shift 66
	IF  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'{'  shift 48
	'}'  shift 71
	';'  shift 72
	.  error

	bloque  goto 73
	sentencia  goto 74
	sentencia_exp  goto 75
	sentencia_if  goto 76
	sentencia_while  goto 77
	sentencia_do  goto 78
	sentencia_switch  goto 79
	sentencia_for  goto 80
	sentencia_break  goto 81
	sentencia_return  goto 82
	sentencia_imprime  goto 83
	sentencia_lee  goto 84
	expresion  goto 85
	variable  goto 86
	expresion_simple  goto 87
	operando  goto 88
	termino  goto 89
	factor  goto 90
	llamada  goto 91


state 53
	factor : REAL .  (101)

	.  reduce 101


state 54
	factor : DOBLE .  (104)

	.  reduce 104


state 55
	factor : ENTERO .  (100)

	.  reduce 100


state 56
	factor : CADENA .  (103)

	.  reduce 103


state 57
	variable : ID .  (75)
	variable : ID . '[' expresion ']'  (76)
	llamada : ID . '(' argumentos ')'  (107)

	'('  shift 92
	'['  shift 93
	'='  reduce 75
	MASIGUAL  reduce 75
	MENOSIGUAL  reduce 75
	DIVIGUAL  reduce 75
	MULTIGUAL  reduce 75
	MODUIGUAL  reduce 75
	OR  reduce 75
	AND  reduce 75
	IGUAL  reduce 75
	DIF  reduce 75
	'<'  reduce 75
	MENIGU  reduce 75
	'>'  reduce 75
	MAYIGU  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	')'  reduce 75
	']'  reduce 75
	';'  reduce 75
	','  reduce 75


state 58
	factor : CARACTER .  (102)

	.  reduce 102


state 59
	sentencia_for : FOR . '(' expresion ';' expresion ';' sentencia_incremento ')' sentencia  (59)

	'('  shift 94
	.  error


state 60
	sentencia_while : WHILE . '(' expresion ')' sentencia  (51)

	'('  shift 95
	.  error


state 61
	sentencia_switch : SWITCH . '(' ID ')' '{' lista_casos case_default '}'  (53)

	'('  shift 96
	.  error


state 62
	sentencia_break : BREAK . ';'  (60)

	';'  shift 97
	.  error


state 63
	sentencia_do : DO . sentencia WHILE '(' expresion ')' ';'  (52)

	REAL  shift 53
	DOBLE  shift 54
	ENTERO  shift 55
	CADENA  shift 56
	ID  shift 57
	CARACTER  shift 58
	FOR  shift 59
	WHILE  shift 60
	SWITCH  shift 61
	BREAK  shift 62
	DO  shift 63
	SCAN  shift 64
	PRINT  shift 65
	RETURN  shift 66
	IF  shift 67
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	'{'  shift 48
	';'  shift 72
	.  error

	bloque  goto 73
	sentencia  goto 98
	sentencia_exp  goto 75
	sentencia_if  goto 76
	sentencia_while  goto 77
	sentencia_do  goto 78
	sentencia_switch  goto 79
	sentencia_for  goto 80
	sentencia_break  goto 81
	sentencia_return  goto 82
	sentencia_imprime  goto 83
	sentencia_lee  goto 84
	expresion  goto 85
	variable  goto 86
	expresion_simple  goto 87
	operando  goto 88
	termino  goto 89
	factor  goto 90
	llamada  goto 91


state 64
	sentencia_lee : SCAN . '(' ID ')' ';'  (64)

	'('  shift 99
	.  error


state 65
	sentencia_imprime : PRINT . '(' expresion ')' ';'  (63)

	'('  shift 100
	.  error


state 66
	sentencia_return : RETURN . ';'  (65)
	sentencia_return : RETURN . expresion ';'  (66)

	REAL  shift 53
	DOBLE  shift 54
	ENTERO  shift 55
	CADENA  shift 56
	ID  shift 57
	CARACTER  shift 58
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	';'  shift 101
	.  error

	expresion  goto 102
	variable  goto 86
	expresion_simple  goto 87
	operando  goto 88
	termino  goto 89
	factor  goto 90
	llamada  goto 91


state 67
	sentencia_if : IF . '(' expresion ')' sentencia sentencia_else  (48)

	'('  shift 103
	.  error


state 68
	factor : '-' . expresion  (106)

	REAL  shift 53
	DOBLE  shift 54
	ENTERO  shift 55
	CADENA  shift 56
	ID  shift 57
	CARACTER  shift 58
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	.  error

	expresion  goto 104
	variable  goto 86
	expresion_simple  goto 87
	operando  goto 88
	termino  goto 89
	factor  goto 90
	llamada  goto 91


state 69
	factor : '!' . expresion  (105)

	REAL  shift 53
	DOBLE  shift 54
	ENTERO  shift 55
	CADENA  shift 56
	ID  shift 57
	CARACTER  shift 58
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	.  error

	expresion  goto 105
	variable  goto 86
	expresion_simple  goto 87
	operando  goto 88
	termino  goto 89
	factor  goto 90
	llamada  goto 91


state 70
	factor : '(' . expresion ')'  (99)

	REAL  shift 53
	DOBLE  shift 54
	ENTERO  shift 55
	CADENA  shift 56
	ID  shift 57
	CARACTER  shift 58
	'-'  shift 68
	'!'  shift 69
	'('  shift 70
	.  error

	expresion  goto 106
	variable  goto 86
	expresion_simple  goto 87
	operando  goto 88
	termino  goto 89
	factor  goto 90
	llamada  goto 91


state 71
	bloque : '{' declaraciones_locales lista_sentencias '}' .  (30)

	.  reduce 30


state 72
	sentencia_exp : ';' .  (47)

	.  reduce 47


state 73
	sentencia : bloque .  (43)

	.  reduce 43


state 74
	lista_sentencias : lista_sentencias sentencia .  (33)

	.  reduce 33


state 75
	sentencia : sentencia_exp .  (35)

	.  reduce 35


state 76
	sentencia : sentencia_if .  (36)

	.  reduce 36


state 77
	sentencia : sentencia_while .  (37)

	.  reduce 37


state 78
	sentencia : sentencia_do .  (38)

	.  reduce 38


state 79
	sentencia : sentencia_switch .  (39)

	.  reduce 39


state 80
	sentencia : sentencia_for .  (40)

	.  reduce 40


state 81
	sentencia : sentencia_break .  (41)

	.  reduce 41


state 82
	sentencia : sentencia_return .  (42)

	.  reduce 42


state 83
	sentencia : sentencia_imprime .  (44)

	.  reduce 44


state 84
	sentencia : sentencia_lee .  (45)

	.  reduce 45


state 85
	sentencia_exp : expresion . ';'  (46)

	';'  shift 107
	.  error


state 86
	expresion : variable . operador_asignacion expresion  (67)
	factor : variable .  (97)

	'='  shift 108
	MASIGUAL  shift 109
	MENOSIGUAL  shift 110
	DIVIGUAL  shift 111
	MULTIGUAL  shift 112
	MODUIGUAL  shift 113
	OR  reduce 97
	AND  reduce 97
	IGUAL  reduce 97
	DIF  reduce 97
	'<'  reduce 97
	MENIGU  reduce 97
	'>'  reduce 97
	MAYIGU  reduce 97
	'+'  reduce 97
	'-'  reduce 97
	'*'  reduce 97
	'/'  reduce 97
	'%'  reduce 97
	')'  reduce 97
	']'  reduce 97
	';'  reduce 97
	','  reduce 97

	operador_asignacion  goto 114


87: shift/reduce conflict (shift 115, reduce 68) on OR
87: shift/reduce conflict (shift 116, reduce 68) on AND
87: shift/reduce conflict (shift 117, reduce 68) on IGUAL
87: shift/reduce conflict (shift 118, reduce 68) on DIF
87: shift/reduce conflict (shift 119, reduce 68) on '<'
87: shift/reduce conflict (shift 120, reduce 68) on MENIGU
87: shift/reduce conflict (shift 121, reduce 68) on '>'
87: shift/reduce conflict (shift 122, reduce 68) on MAYIGU
state 87
	expresion : expresion_simple .  (68)
	expresion_simple : expresion_simple . operador_relacional operando  (77)
	expresion_simple : expresion_simple . operador_logico operando  (78)

	OR  shift 115
	AND  shift 116
	IGUAL  shift 117
	DIF  shift 118
	'<'  shift 119
	MENIGU  shift 120
	'>'  shift 121
	MAYIGU  shift 122
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	')'  reduce 68
	']'  reduce 68
	';'  reduce 68
	','  reduce 68

	operador_relacional  goto 123
	operador_logico  goto 124


88: shift/reduce conflict (shift 125, reduce 79) on '+'
88: shift/reduce conflict (shift 126, reduce 79) on '-'
state 88
	expresion_simple : operando .  (79)
	operando : operando . operador_adicion termino  (88)

	'+'  shift 125
	'-'  shift 126
	OR  reduce 79
	AND  reduce 79
	IGUAL  reduce 79
	DIF  reduce 79
	'<'  reduce 79
	MENIGU  reduce 79
	'>'  reduce 79
	MAYIGU  reduce 79
	'*'  reduce 79
	'/'  reduce 79
	'%'  reduce 79
	')'  reduce 79
	']'  reduce 79
	';'  reduce 79
	','  reduce 79

	operador_adicion  goto 127


89: shift/reduce conflict (shift 128, reduce 89) on '*'
89: shift/reduce conflict (shift 129, reduce 89) on '/'
89: shift/reduce conflict (shift 130, reduce 89) on '%'
state 89
	operando : termino .  (89)
	termino : termino . operador_mul factor  (92)
